# keylight-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
demo-app/: Cargo.toml
demo-app/src/: main.rs
keylight/: Cargo.toml
keylight-cli/: Cargo.toml
keylight-cli/src/: main.rs
keylight-cli/tests/: cli.rs
keylight/src/: client.rs  clock.rs  config.rs  error.rs  keyset.rs  lease.rs  lib.rs  machine.rs  state.rs  telemetry.rs  verifier.rs
keylight/src/http/: mod.rs  retry.rs  ureq_transport.rs
keylight/src/store/: device.rs  encrypted_file.rs  mod.rs
keylight/tests/: client_activate.rs  client_cached_lease.rs  client_clock.rs  client_events.rs  client_keyless.rs  client_launch_offline.rs  client_lifecycle_e2e.rs  client_trial.rs  conformance.rs  live_integration.rs
keylight/tests/fixtures/: vectors.json
tauri-plugin-keylight/: Cargo.toml  README.md  build.rs  package-lock.json  package.json  rollup.config.js  tsconfig.json
tauri-plugin-keylight/guest-js/: index.ts
tauri-plugin-keylight/permissions/: default.toml
tauri-plugin-keylight/permissions/autogenerated/: reference.md
tauri-plugin-keylight/permissions/autogenerated/commands/: check_on_launch.toml  refresh_if_needed.toml  report_keyless_state.toml
tauri-plugin-keylight/permissions/schemas/: schema.json
tauri-plugin-keylight/src/: lib.rs
