[workspace]
resolver = "2"
members = ["keylight", "keylight-cli", "demo-app", "tauri-plugin-keylight"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/keylight-dev/keylight-rust"
authors = ["Keylight <dev@keylight.dev>"]
