[package]
name = "keylight-cli"
description = "Keylight licensing CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "keylight"
path = "src/main.rs"

[dependencies]
keylight = { path = "../keylight", version = "0.3.0" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
