[package]
name = "keylight"
description = "Keylight licensing SDK — activate/validate licenses with offline Ed25519 lease verification."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ureq = { version = "2.10", features = ["json", "tls"] }
ed25519-dalek = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chacha20poly1305 = "0.10"
blake3 = "1.5"
directories = "5"
thiserror = "1"
rand = "0.8"

[dev-dependencies]
mockito = "1.5"
