[package]
name = "keylight"
description = "Keylight licensing SDK — activate/validate licenses with offline Ed25519 lease verification."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/keylight"
keywords = ["licensing", "license", "ed25519", "sdk", "activation"]
categories = ["authentication", "api-bindings"]

[dependencies]
ureq = { version = "2.10", features = ["json", "tls"] }
ed25519-dalek = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chacha20poly1305 = "0.10"
blake3 = "1.5"
sha2 = "0.10"
directories = "5"
thiserror = "1"
rand = "0.8"
