[package]
name = "tauri-plugin-keylight"
description = "Tauri v2 plugin for the Keylight licensing SDK (Rust side)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keylight = { path = "../keylight", version = "0.1.0" }
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
