[package]
name = "tauri-plugin-keylight"
description = "Tauri v2 plugin for the Keylight licensing SDK (Rust side)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
links = "tauri-plugin-keylight"
readme = "README.md"
keywords = ["tauri", "tauri-plugin", "licensing", "license-key", "keylight"]
categories = ["authentication", "gui"]

[dependencies]
keylight = { path = "../keylight", version = "0.1.2" }
tauri = "2.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
